Basic shopify multi language search page

--- a/shopify_multilang/search_page/index.html
+++ b/shopify_multilang/search_page/index.html
@@ -12,12 +12,12 @@
         data-facets-view-more-text="View More"
         data-facets-searchbox-text="Search for "
         data-facets-titles='{"vendor":"Brand","categories":"Category"}'
-        data-facets-design="212279"
+        data-facets-design="FACETS_DESIGN_ID_EN"
     {% elsif shop.locale == 'da' %}
         data-facets-view-more-text="Se mere"
         data-facets-searchbox-text="Søg efter "
         data-facets-titles='{"price":"Pris","categories":"Kategorier","vendor":"Brand"}'
-        data-facets-design="212259"
+        data-facets-design="FACETS_DESIGN_ID_DA"
     {% endif %}> 
 </span>
 <div class="container">
