--- a/search/livesearch/list/index.html
+++ b/search/livesearch/list/index.html
@@ -29,18 +29,18 @@
         </div>
         {% endif %} {% if (suggestions.length + categories.length) > 0 %}
         <div class="clerk-instant-search-col clerk-col-2">
+            {% if suggestions.length > 0 %}
             <div class="clerk-instant-search-suggestions">
-                {% if suggestions.length > 1 %}
                 <div class="clerk_instant_search_suggestions_wrap">
-                    <div class="clerk-instant-search-title">Forslag</div>
-                    {% for suggestion in suggestions %} {% if suggestion != query %}
+                    <div class="clerk-instant-search-title">Suggestions</div>
+                    {% for suggestion in suggestions %}
                     <div class="clerk-instant-search-category clerk-instant-search-key-selectable">
-                        <a class="clerk_instant_search_link" href="/module/clerk/search?search_query={{suggestion}}">{{ suggestion | highlight query }}</a>
+                        <a class="clerk_instant_search_link" href="/module/clerk/search?search_query={{suggestion}}">{{suggestion | highlight query }}</a>
                     </div>
-                    {% endif %} {% endfor %}
+                    {% endfor %}
                 </div>
-                {% endif %}
             </div>
+            {% endif %}
             {% if categories.length > 0 %}
             <div class="clerk-instant-search-categories">
                 <div class="clerk-instant-search-title">Kategorier</div>
