Fixed an oopsie

--- a/search/livesearch/list/index.html
+++ b/search/livesearch/list/index.html
@@ -1,6 +1,6 @@
 <div class="clerk-instant-search">
     <div class="clerk-instant-search-grid">
-        {% if products.length == 0 and categories.length == 0 and  %}
+        {% if products.length == 0 and categories.length == 0 and suggestions.length == 0  %}
         <!-- NO RESULTS FALLBACK -->
         <div class="clerk-instant-search-no-results">
             Ingen resultater for : <b>{{ query }}</b>
