--- a/search/livesearch/list/index.html
+++ b/search/livesearch/list/index.html
@@ -10,7 +10,7 @@
         <div class="clerk-instant-search-col clerk-col-1">
             <div class="clerk-instant-search-products">
                 <div class="clerk-instant-search-title">Produkter</div>
-                {% for item in products %} {% assign currency_symbol = "" %}
+                {% for item in products %} {% assign currency_symbol = "€" %}
                 <div class="clerk-instant-search-product clerk-instant-search-key-selectable">
                     <a href="{{item.url}}" class="clerk-instant-search-link">
                         <div class="clerk-instant-search-product-image" style="background-image: url('{{ item.image }}');"></div>
