fix syntax on locale liquid var

--- a/shopify_multilang/tracking_script.html
+++ b/shopify_multilang/tracking_script.html
@@ -1,6 +1,6 @@
 <!-- Start of Clerk.io E-commerce Personalisation tool - www.clerk.io Tax-{{ tax_line.rate_percentage }} -->
 <script type="text/javascript">
-    let clerkLocale = {{ shop.locale }};
+    let clerkLocale = '{{ shop.locale }}';
     let publicKey;
     // Check which locale we are in and set the correct public key
     switch (clerkLocale) {
