removed residual code

--- a/shopify_multilang/tracking_script.html
+++ b/shopify_multilang/tracking_script.html
@@ -1,4 +1,4 @@
-<!-- Start of Clerk.io E-commerce Personalisation tool - www.clerk.io Tax-{{ tax_line.rate_percentage }} -->
+<!-- Start of Clerk.io E-commerce Personalisation tool - www.clerk.io -->
 <script type="text/javascript">
     let clerkLocale = '{{ shop.locale }}';
     let publicKey;
@@ -37,4 +37,4 @@
         }
     });
 </script>
-<!-- End of Clerk.io E-commerce Personalisation tool - www.clerk.io Tax-{{ tax_line.rate_percentage }} -->
+<!-- End of Clerk.io E-commerce Personalisation tool - www.clerk.io -->
