Removed unnecessary <u> tag

--- a/search/livesearch/list/index.html
+++ b/search/livesearch/list/index.html
@@ -27,9 +27,7 @@
                     </a>
                 </div>
                 {% endfor %} {% if hits > products.length %}
-                <a class="clerk-view-more-results-button" href="/module/clerk/search?search_query={{ query}}">
-                    <u>Se flere resultater</u>
-                </a>
+                <a class="clerk-view-more-results-button" href="/module/clerk/search?search_query={{ query}}">Se flere resultater</a>
                 {% endif %}
             </div>
         </div>
