--- a/facets/side-facets-new/index.html
+++ b/facets/side-facets-new/index.html
@@ -1,57 +1,47 @@
 <div class="clerk_facets">
-    <div class="clerk_facets_container">
-        {% for facet_group in facets %}
-        <div class="clerk_facets_wrapper">
-            <div class="clerk_facets_title">
-                <button type="button" class="clerk_facets_toggle" aria-expanded="false">
-                    <span class="clerk_facets_toggle_headline">{{ facet_group.title }}</span>
-                    <span class="clerk_facets_toggle_icons_wrapper">
-                        <!-- Expand icon, show/hide based on section open state. -->
-                        <svg class="clerk_facets_toggle_icons clerk_plus_icon" viewBox="0 0 20 20" fill="#000"
-                            aria-hidden="true">
-                            <path
-                                d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
-                        </svg>
-                        <!-- Collapse icon, show/hide based on section open state. -->
-                        <svg class="clerk_facets_toggle_icons clerk_minus_icon hidden" viewBox="0 0 20 20" fill="#000"
-                            aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M4 10a.75.75 0 01.75-.75h10.5a.75.75 0 010 1.5H4.75A.75.75 0 014 10z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </span>
-                </button>
-            </div>
-            <div class="clerk_facet_option_wrapper hidden">
-                {% if facet_group.type == "range" %}
-                <div class="clerk_facet_option_range"></div>
-                {% endif %}
-                {% for facet in facet_group.facets %}
-                <div class="clerk_facet_option">
-                    <div class="clerk_facet_option">
-                        <input type="checkbox" id="facet_checkbox" class="clerk_facet_checkbox">
-                        <label for="facet_checkbox" class="clerk_facet_label">
-                            <div class="clerk_facet_option_name">{{ facet.name }}</div>
-                            <div class="clerk_facet_option_count">{{ facet.count }}</div>
-                        </label>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-    <script type="text/javascript">
-        let clerk_toggle_btns = document.querySelectorAll('.clerk_facets_toggle');
-        let clerk_plus_icons = document.querySelectorAll('.clerk_plus_icon');
-        let clerk_minus_icons = document.querySelectorAll('.clerk_minus_icon');
-        let clerk_facet_option_wrappers = document.querySelectorAll('.clerk_facet_option_wrapper');
+	<div class="clerk_facets_container">
+		{% for facet_group in facets %}
+		<div class="clerk_facets_wrapper">
+			<div class="clerk_facets_title">
+				<button type="button" class="clerk_facets_toggle" aria-expanded="false">
+					<span class="clerk_facets_toggle_headline">{{ facet_group.title }}</span>
+					<span class="clerk_facets_toggle_icons_wrapper">
+						<!-- Expand icon, show/hide based on section open state. -->
+						<svg class="clerk_facets_toggle_icons clerk_plus_icon" viewBox="0 0 20 20" fill="#000" aria-hidden="true">
+							<path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
+						</svg>
+						<!-- Collapse icon, show/hide based on section open state. -->
+						<svg class="clerk_facets_toggle_icons clerk_minus_icon hidden" viewBox="0 0 20 20" fill="#000" aria-hidden="true">
+							<path fill-rule="evenodd" d="M4 10a.75.75 0 01.75-.75h10.5a.75.75 0 010 1.5H4.75A.75.75 0 014 10z" clip-rule="evenodd" />
+						</svg>
+					</span>
+				</button>
+			</div>
+			<div class="clerk_facet_option_wrapper hidden">
+				{% if facet_group.type == "range" %}
+				<div class="clerk_facet_option_range"></div>
+				{% endif %} {% for facet in facet_group.facets %}
+				<div class="clerk-facet clerk_facet_option {% if facet.selected %} clerk-facet-selected {% endif %}" data-facet="{{ facet_group.group }}" data-value="{{ facet.value }}" data-min="{{ facet.min }}" data-max="{{ facet.max }}">
+					<div class="clerk_facet_option_name">{{ facet.name }}</div>
+					<div class="clerk_facet_option_count">{{ facet.count }}</div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+		{% endfor %}
+	</div>
+</div>
+<script type="text/javascript">
+	var clerk_toggle_btns = document.querySelectorAll('.clerk_facets_toggle')
+	var clerk_plus_icons = document.querySelectorAll('.clerk_plus_icon')
+	var clerk_minus_icons = document.querySelectorAll('.clerk_minus_icon')
+	var clerk_facet_option_wrappers = document.querySelectorAll('.clerk_facet_option_wrapper')
 
-        clerk_toggle_btns.forEach((btn, index) => {
-            btn.addEventListener('click', () => {
-                clerk_minus_icons[index].classList.toggle('hidden');
-                clerk_plus_icons[index].classList.toggle('hidden');
-                clerk_facet_option_wrappers[index].classList.toggle('hidden');
-            });
-        });
-    </script>
+	clerk_toggle_btns.forEach((btn, index) => {
+		btn.addEventListener('click', () => {
+			clerk_minus_icons[index].classList.toggle('hidden')
+			clerk_plus_icons[index].classList.toggle('hidden')
+			clerk_facet_option_wrappers[index].classList.toggle('hidden')
+		})
+	})
+</script>
