--- a/facets/side-facets-new/index.html
+++ b/facets/side-facets-new/index.html
@@ -1,6 +1,6 @@
 <div class="clerk_facets">
 	<div class="clerk_display_toggle" onclick="clerk_toggle_facets()">
-		Filtri
+		Filters
 		<?xml version="1.0" encoding="UTF-8"?>
 		<svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="35" height="18">
 			<path d="M1,4.75H3.736a3.728,3.728,0,0,0,7.195,0H23a1,1,0,0,0,0-2H10.931a3.728,3.728,0,0,0-7.195,0H1a1,1,0,0,0,0,2ZM7.333,2a1.75,1.75,0,1,1-1.75,1.75A1.752,1.752,0,0,1,7.333,2Z" />
@@ -9,6 +9,16 @@
 		</svg>
 	</div>
 	<div class="clerk_facets_container">
+    <div class="clerk_facets_wrapper">
+      <select class="clerk_sort_toggle" onchange="clerkSorting(this.options[ this.selectedIndex ].value, event);">
+          <option class="clerk_sort_default" value="" disabled selected>Sorter efter:</option>
+          <option value="null_null">Bedst sælgende</option>
+          <option value="asc_name">Navn (A - Z)</option>
+          <option value="desc_name">Navn (Z - A)</option>
+          <option value="asc_price">Pris (lav til høj)</option>
+          <option value="desc_price">Pris (høj til lav)</option>
+      </select>
+    </div>
 		{% for facet_group in facets %}
 		<div class="clerk_facets_wrapper">
 			<div class="clerk_facets_title">
@@ -40,7 +50,8 @@
 		{% endfor %}
 	</div>
 </div>
-<script type="text/javascript">
+
+<script>
 	var clerk_toggle_btns = document.querySelectorAll('.clerk_facets_toggle')
 	var clerk_plus_icons = document.querySelectorAll('.clerk_plus_icon')
 	var clerk_minus_icons = document.querySelectorAll('.clerk_minus_icon')
@@ -62,5 +73,29 @@
 		} else {
 			clerk_facets_container.style.display = 'block'
 		}
-	}
+	}    
+	
+	
+	// Function to toggle sorting of results based on option in .clerk_sort_select.
+    // The function takes the value of the option and splits it by _.
+    // The value should always be either asc or desc followed by _ and the attribute key.
+    // The only exception to this is the default sorting which is defined as null_null.
+    function clerkSorting(val, event) {
+        or = val.split("_")[0] == "null" ? eval(val.split("_")[0]) : val.split("_")[0];
+        orb = val.split("_")[1] == "null" ? eval(val.split("_")[1]) : val.split("_")[1];
+        param_sort = val;
+        Clerk("content", "[data-target][data-query][data-template][data-clerk-content-id]", "param", {
+            orderby: orb,
+            order: or,
+        });
+    }
+    // Change value in select element to currently active choice, since element rerenders upon initial user input.
+    // Without it will show the first option nominally regardless of the current ordering in effect.
+    if (!param_sort) {
+        var param_sort;
+    } else {
+        if (param_sort.length > 0) {
+            document.querySelector(".clerk_sort_select").value = param_sort;
+        }
+    }
 </script>
