--- a/facets/search and facets/facets.html
+++ b/facets/search and facets/facets.html
@@ -24,7 +24,7 @@
             <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
           </svg>
           <!-- Collapse icon, show/hide based on section open state. -->
-          <svg class="clerk_facets_toggle_icons clerk_minus_icon hidden" viewBox="0 0 20 20" fill="#000" aria-hidden="true">
+          <svg class="clerk_facets_toggle_icons clerk_minus_icon clerk-hidden" viewBox="0 0 20 20" fill="#000" aria-hidden="true">
             <path fill-rule="evenodd" d="M4 10a.75.75 0 01.75-.75h10.5a.75.75 0 010 1.5H4.75A.75.75 0 014 10z" clip-rule="evenodd" />
           </svg>
         </span>
